--- a/client/index.css
+++ b/client/index.css
@@ -19,7 +19,7 @@
 }
 
 #server > #name {
-    background-color: #3399FF;
+    background-color: #FFCE00;
     color: #323844;
     font-size: 1.5rem;
     font-weight: 700;
