--- a/client/share.css
+++ b/client/share.css
@@ -10,7 +10,7 @@ body {
 
 ul {
     padding-left: 30px;
-    line-height: 1.7;
+    line-height: 2.0;
 }
 
 textarea {
@@ -42,10 +42,12 @@ input[type="text"] {
 }
 
 a {
-    color: #3399FF;
-    padding-bottom: 2px;
+    color: #18181F;
+    font-weight: 700;
     text-decoration: none;
-    border-bottom: 2px solid #3399FF;
+    background-color: #FFCE00;
+    margin: 0px 1px;
+    padding: 3px;
 }
 
 /* Modals */
@@ -70,7 +72,6 @@ a {
     grid-template-rows: auto;
     grid-row-gap: 15px;
     background-color: #18181F;
-    border: 1px solid #3399FF;
     margin: 60px auto;
     padding: 20px;
     width: 600px;
