Various updates to username highlighting

--- a/client/share.css
+++ b/client/share.css
@@ -41,13 +41,16 @@ input[type="text"] {
     width: 200px;
 }
 
-a {
+a.user {
     color: #18181F;
     font-weight: 700;
     text-decoration: none;
     background-color: #FFCE00;
-    margin: 0px 1px;
     padding: 3px;
+}
+
+a.user.notme {
+    background-color: #CE00FF;
 }
 
 /* Modals */
@@ -102,6 +105,16 @@ a {
 
 .important {
     color: #FF0031;
+}
+
+.highlight-margin-l,
+.highlight-margin-a {
+    margin-left: 3px;
+}
+
+.highlight-margin-r,
+.highlight-margin-a {
+    margin-right: 3px;
 }
 
 /* Alerts */
