--- a/client/index.css
+++ b/client/index.css
@@ -31,6 +31,68 @@
     grid-row-gap: 15px;
 }
 
+#server ul {
+    padding-left: 10px;
+}
+
+#server li {
+    list-style-type: none;
+}
+
+#server li > div {
+    display: grid;
+    grid-template-columns: auto minmax(25px, max-content);
+    grid-column-gap: 15px;
+    background-color: #18181F;
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-right: 15px;
+}
+
+#server li > div .icons {
+    display: grid;
+    grid-template-columns: repeat(2, 25px);
+    grid-column-gap: 8px;
+    cursor: pointer;
+}
+
+#server li > div .icon {
+    font-size: 1.2rem;
+    text-align: center;
+    position: relative;
+    bottom: 3px;
+    height: 0px;
+}
+
+#server li > div .pill {
+    font-size: 0.8rem;
+    background-color: #0031FF;
+    padding: 3px 5px;
+}
+
+#server li > .section {
+    border-left: 5px solid #0031FF;
+    padding: 15px;
+}
+
+#server li > .help {
+    grid-template-columns: auto;
+    background-color: #323844;
+    font-weight: normal;
+    padding-right: 15px;
+    margin-bottom: 10px;
+}
+
+#server li > .channel {
+    border-left: 5px solid #FFCE00;
+    margin-left: 30px;
+    padding: 5px 15px;
+}
+
+#server li > div:last-child {
+    margin-bottom: 15px;
+}
+
 /* Column 2 */
 
 #chat {
@@ -105,7 +167,7 @@
 .tabs {
     display: grid;
     grid-template-rows: 30px auto;
-    grid-row-gap: 15px;
+    grid-row-gap: 10px;
 }
 
 .tabs > .head {
@@ -117,7 +179,6 @@
 }
 
 .tabs > .head > div {
-    padding: 0px 10px;
     height: 25px;
     cursor: pointer;
 }
