--- a/client/share.css
+++ b/client/share.css
@@ -39,6 +39,14 @@ input[type="checkbox"] {
 input[type="text"] {
     padding: 10px;
     width: 200px;
+    border: none;
+}
+
+a.button {
+    text-decoration: none;
+    border-bottom: 2px solid #0031FF;
+    padding-bottom: 3px;
+    text-transform: uppercase;
 }
 
 a.user {
