--- a/client/share.css
+++ b/client/share.css
@@ -47,6 +47,7 @@ a.button {
     border-bottom: 2px solid #0031FF;
     padding-bottom: 3px;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 a.user {
